--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -338,7 +338,7 @@
     -fx-effect: innershadow(gaussian, black, 10, 0, 0, 0);
 }
 
-#resultDisplay .content {
+#resultDisplay .content, #viewDisplay .content{
     -fx-background-color: transparent, #383838, transparent, #383838;
     -fx-background-radius: 0;
 }
