Update the UI to display the next interview date in the CompanyListCard in the list of companies

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -348,6 +348,12 @@
     -fx-vgap: 3;
 }
 
+
+#nextInterviewLabel, #nextInterviewDate {
+    -fx-font-size: 15;
+    -fx-font-family: "Segoe UI";
+}
+
 #tags .label, #tagsDisplayed .label {
     -fx-text-fill: white;
     -fx-background-color: #3e7b91;
@@ -366,17 +372,32 @@
 }
 
 #nameDisplayed {
-    -fx-font-size: 40;
+    -fx-font-size: 35;
     -fx-text-fill: white;
+    -fx-font-family: "Segoe UI Semibold";
 }
 
-#introViewing, #phoneDisplayed, #emailDisplayed, #addressDisplayed, #addressLabel, #emailLabel, #phoneLabel,
-#descriptionDisplayed, #descriptionLabel, #yourInternshipsLabel {
-    -fx-font-size: 18;
+#introViewing, #phoneDisplayed, #emailDisplayed,
+#addressDisplayed, #descriptionDisplayed {
+    -fx-font-size: 15;
     -fx-text-fill: white;
+    -fx-font-family: "Segoe UI";
 }
 
-#internId, #roleName {
-    -fx-font-size: 18;
-    -fx-font-weight: bold;
+#introViewing, #addressLabel, #emailLabel, #phoneLabel, #descriptionLabel, #yourInternshipsLabel {
+    -fx-font-size: 15;
+    -fx-text-fill: white;
+    -fx-font-family: "Segoe UI Semibold";
+}
+
+#internId, #roleName, #internDescLabel, #interviewDateTimeLabel {
+    -fx-font-size: 14;
+    -fx-text-fill: white;
+    -fx-font-family: "Segoe UI Semibold";
+}
+
+#internshipDesc, #internshipDateTime {
+    -fx-font-size: 14;
+    -fx-text-fill: white;
+    -fx-font-family: "Segoe UI";
 }
