--- a/src/main/resources/view/CompanyListCard.fxml
+++ b/src/main/resources/view/CompanyListCard.fxml
@@ -15,7 +15,7 @@
       <columnConstraints>
          <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
       </columnConstraints>
-      <VBox alignment="CENTER_LEFT" minHeight="80.0" GridPane.columnIndex="0">
+      <VBox fx:id="companyCardVbox" alignment="CENTER_LEFT" minHeight="100.0" GridPane.columnIndex="0">
          <padding>
             <Insets bottom="5" left="15" right="5" top="5" />
          </padding>
@@ -32,6 +32,15 @@
             <VBox.margin>
                <Insets top="5.0" />
             </VBox.margin></FlowPane>
+         <HBox fx:id="nextInterviewHbox">
+            <children>
+               <Label fx:id="nextInterviewLabel" text="Next: " />
+               <Label fx:id="nextInterviewDate" />
+            </children>
+            <VBox.margin>
+               <Insets top="10.0" />
+            </VBox.margin>
+         </HBox>
       </VBox>
       <rowConstraints>
          <RowConstraints />
