--- a/src/main/resources/view/InternshipListCard.fxml
+++ b/src/main/resources/view/InternshipListCard.fxml
@@ -41,7 +41,7 @@
             </VBox.margin></FlowPane>
          <HBox alignment="CENTER_LEFT" layoutX="25.0" layoutY="39.0" spacing="5">
             <children>
-               <Label fx:id="id1" styleClass="cell_big_label" text="Description:">
+               <Label fx:id="internDescLabel" styleClass="cell_big_label" text="Description:">
                   <minWidth>
                      <Region fx:constant="USE_PREF_SIZE" />
                   </minWidth>
@@ -49,7 +49,7 @@
                <Label fx:id="internshipDesc" styleClass="cell_big_label" />
             </children>
             <VBox.margin>
-               <Insets top="10.0" />
+               <Insets top="5.0" />
             </VBox.margin>
          </HBox>
          <HBox fx:id="dateTimeHBox" alignment="CENTER_LEFT" layoutX="25.0" layoutY="53.0" spacing="5">
@@ -62,7 +62,7 @@
                <Label fx:id="internshipDateTime" styleClass="cell_big_label" />
             </children>
             <VBox.margin>
-               <Insets top="10.0" />
+               <Insets top="5.0" />
             </VBox.margin>
          </HBox>
     </VBox>
